2001-10-19 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunit/Exception.h:
	* src/cppunit/Exception.cpp: what(), added back the throw() qualifier.

2001-10-14 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunitui/* : added, Qt TestRunner.

	* examples/qt/* : added, example showing the use of Qt TestRunner.

	* src/qttestrunner : added, source of the Qt TestRunner DLL.

2001-10-08  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* src/cppunit/Exception.cpp (what): Remove "throw()" qualifier, to
	match earlier change to header.

2001-10-07 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunit/CompilerTestResultOutputter.h :
	renamed CompilerOutputter.h

	* src/cppunit/CompilerTestResultOutputter.cpp : 
	renamed CompilerOutputter.cpp

	* include/cppunit/CompilerTestResultOutputter.h :
	* src/cppunit/CompilerTestResultOutputter.cpp : ajust max line length
	for wrapping. Added static factory method defaultOutputter(). Print 
	the number of test runs on success. 

	* include/cppunit/CompilerTestResultOutputter.h : renamed
	CompilerOutputter.h.

	* src/cppunit/CompilerTestResultOutputter.cpp : renamed
	CompilerOutputter.cpp.

	* examples/cppunittest/CppUnitTestMain.cpp : use factory method 
	CompilerTestResultOutputter::defaultOutputter().

	* src/msvc6/DSPlugIn/DSPlugIn.dsp : removed COM registration in 
	post-build step. IT is automatically done by VC++ when the add-in is
	added. Caused build to failed if the add-in was used in VC++.

	* NEWS : updated.

	* src/cppunit/TestAssert.cpp : modified deprecated assert 
	implementations to use Asserter.

	* examples/cppunittest/XmlTestResultOutputterTest.h : 
	renamed XmlOutputterTest.h.

	* examples/cppunittest/XmlTestResultOutputterTest.cpp : 
	renamed XmlOutputterTest.cpp.

	* NEWS :
	* examples/cppunittest/CppUnitTestMain.cpp :
	* examples/cppunittest/CppUnitTestMain.dsp :
	* examples/cppunittest/Makefile.am :
	* examples/cppunittest/XmlTestResultOutputterTest.h :